#18: Add tests for items and grid getters